--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Excursions</title>
-    <link href="./style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/style.css" type="text/css" rel="stylesheet">
 
 </head>    
 <body>
