--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Excursions</title>
-    <link href="https://github.com/dcs127/dcs127.github.io/blob/master/resources/style.css" type="text/css" rel="stylesheet">
+    <title>Excursion</title>
+    <link href="resources/style.css" type="text/css" rel="stylesheet">
 
 </head>    
 <body>
 
 <h1>Discover hidden places in the world around you</h1>
+<h2><a href="https://693c2dc7eae04df1b385b533d84f1868.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a></h2>
+<video autoplay="autoplay" muted loop>
+<source src="resources/excursion.mp4"
+            type="video/mp4">
+</video>    
 
+<h3>Your personal travel guide</h3>
+<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+<img src="resources/camp.jpeg"/>
+<br>
+<br>
+<img src="resources/phone.jpeg"/>
+<h3>Coming soon for iPhone and Android</h3>
+<h2><a href="https://693c2dc7eae04df1b385b533d84f1868.cc-propeller.cloud/#">Download Excursion (Coming Soon!)</a></h2>
+<footer>
+    <p>© Excursion</p>
+</footer>
 
 </body>
 
